# parameter-efficient-multi-task-adaptors-for-echocardiographic-image-analysis

./: README.md  pyproject.toml  requirements.txt  test.py  train.py  util.py
conf/: config_lora_camus.yaml  config_pretrain_echonet_segformer-MiT-B0.yaml
conf/adapterHead/: classifierHead_full.yaml  classifier_backbone.yaml  classifier_full.yaml  classifier_pretrain.yaml  regressor_backbone.yaml  regressor_backbone_MiTB2.yaml  regressor_full.yaml  regressor_pretrain.yaml  segmentationHead_backbone.yaml
conf/dataset/: camus.yaml  echonet.yaml
conf/model/: segformer_MiT-B0.yaml  segformer_MiT-B1.yaml  segformer_MiT-B2.yaml  segformer_MiT-B3.yaml  segformer_MiT-B4.yaml  segformer_MiT-B5.yaml  unet.yaml
conf/transform/: transform_camus.yaml  transform_echonet.yaml
conf/wandb/: wandb.yaml
dataset/: camusDataset.py  camusHelpers.py  echonetDataset.py
model/: classifier.py  classifierHead.py  echocardioAdapter.py  regressor.py  segformer.py  unet.py
