[project]
name = "vt1"
version = "0.1.0"
requires-python = ">=3.9"
description = "Implementation of multi-task adaptors on pretrained model for various downstream tasks with LoRA"
authors = [
    {name = "Adrian Thür", email = "thueradr@students.zhaw.ch"},
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "model",
    "dataset"
]
